solucion para hostearla

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- Navbar content -->
     <nav class="nav nav-pills nav-justified" style="margin-bottom: 20px">
       <img src="../img/descarga-removebg-preview.png" alt="" />
-      <a class="nav-link active bg-danger" href="../html/index.html">Home</a>
-      <a class="nav-link" href="../html/equipo.html">Equipo</a>
+      <a class="nav-link active bg-danger" href="index.html">Home</a>
+      <a class="nav-link" href="html/equipo.html">Equipo</a>
     </nav>
     <div class="container-fluid bg-dark">
       <div class="container">
@@ -75,6 +75,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="../js/home.js"></script>
+    <script src="js/home.js"></script>
   </body>
 </html>
