--- a/html/equipo.html
+++ b/html/equipo.html
@@ -16,7 +16,7 @@
     <!-- Navbar content -->
     <nav class="nav nav-pills nav-justified" style="margin-bottom: 20px">
       <img src="../img/descarga-removebg-preview.png" alt="" />
-      <a class="nav-link" href="../html/index.html">Home</a>
+      <a class="nav-link" href="../index.html">Home</a>
       <a class="nav-link active bg-danger" href="../html/equipo.html">Equipo</a>
     </nav>
 
